From voice to translate to voice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>Drei-Länder-Hack</h1>
-<h2>Tulpen-Tool</h2>
+<mat-toolbar color="primary">
+  <span>Drei-Länder-Hack - Tuplen-App</span>
+</mat-toolbar>
 
 <app-text></app-text>
