--- a/src/app/text/text.component.html
+++ b/src/app/text/text.component.html
@@ -23,12 +23,25 @@
   </mat-form-field>
 </div>
 
-<h2 class="mat-h2">Erkannter Text</h2>
-<mat-form-field>
-  <textarea matInput [value]="(recognisedText$ | async)"></textarea>
-</mat-form-field>
+<h1 class="mat-h1">Tuplen-Magie</h1>
+<section>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Erkannte Eingabe</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p *ngIf="(recognisedText$ | async) as rt">{{ rt }}</p>
+    </mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        Übersetzung
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p *ngIf="(translatedResult$ | async)?.text as tr">{{ tr }}</p>
+    </mat-card-content>
+  </mat-card>
 
-<h2 class="mat-h2">Übersetzung</h2>
-<mat-form-field>
-  <textarea matInput [value]="(translatedResult$ | async)?.text"></textarea>
-</mat-form-field>
+</section>
