--- a/src/app/text/text.component.html
+++ b/src/app/text/text.component.html
@@ -24,7 +24,7 @@
 </div>
 
 <h1 class="mat-h1">Tuplen-Magie</h1>
-<section>
+<section class="recognition">
   <mat-card>
     <mat-card-header>
       <mat-card-title>Erkannte Eingabe</mat-card-title>
@@ -43,5 +43,44 @@
       <p *ngIf="(translatedResult$ | async)?.text as tr">{{ tr }}</p>
     </mat-card-content>
   </mat-card>
-
+</section>
+<section class="analysis" *ngIf="analyzedText$ | async as ta">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Text-Analyse: Erkannte Objekte</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <table class="table-entities" mat-table [dataSource]="ta.entities">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef>Typ</th>
+          <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsEntities"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsEntities;">
+      </table>
+    </mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Text-Analyse: Klassifikation der Wörter</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <table class="table-tokens" mat-table [dataSource]="ta.tokens">
+        <ng-container matColumnDef="word">
+          <th mat-header-cell *matHeaderCellDef>Wort</th>
+          <td mat-cell *matCellDef="let element"> {{element.text.content}} </td>
+        </ng-container>
+        <ng-container matColumnDef="tag">
+          <th mat-header-cell *matHeaderCellDef>Wort-Art</th>
+          <td mat-cell *matCellDef="let element"> {{element.partOfSpeech.tag}} </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsTokens"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsTokens;">
+      </table>
+    </mat-card-content>
+  </mat-card>
 </section>
