--- a/src/app/text/text.component.scss
+++ b/src/app/text/text.component.scss
@@ -6,8 +6,19 @@
     margin-bottom: 20px;
   }
 
-  > section {
+  > section.recognition {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
+    margin-bottom: 20px;
+  }
+
+  > section.analysis {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin-bottom: 20px;
+  }
+
+  table {
+    width: 100%;
   }
 }
