--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Drei-Länder-Hack - Tuplen-App</span>
+  <span>Drei-Länder-Hack - Tulpen-App</span>
 </mat-toolbar>
 
 <app-text></app-text>
