--- a/src/app/text/text.component.html
+++ b/src/app/text/text.component.html
@@ -10,6 +10,7 @@
       <option value="hu">Ungarisch</option>
       <option value="de">Deutsch</option>
       <option value="en">Englisch</option>
+      <option value="fr">Französisch</option>
     </select>
   </mat-form-field>
 
@@ -19,6 +20,7 @@
       <option value="hu">Ungarisch</option>
       <option value="de">Deutsch</option>
       <option value="en">Englisch</option>
+      <option value="fr">Französisch</option>
     </select>
   </mat-form-field>
 </div>
