- sbb components - icons - navigation bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<mat-toolbar color="primary">
-  <span>Drei-Länder-Hack - Tulpen-App</span>
-</mat-toolbar>
-
-<app-text></app-text>
+<app-navbar></app-navbar>
+<div class="app">
+  <app-text></app-text>
+</div>
