--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '../node_modules/esta-webjs-extensions/styles/esta-extension-styles.scss';
+@import '../node_modules/@sbb-esta/angular-public/typography.css';
 
-body {
-  margin: 0;
+// to remove blue border
+*:focus {
+  outline: 0;
 }
 
-.mat-card-header-text {
-  margin: 0 !important;
+h1 {
+  margin-top: 2em;
+}
+
+h2 {
+  margin-top: 1em;
 }
