--- a/src/app/text/text.component.html
+++ b/src/app/text/text.component.html
@@ -1,89 +1,140 @@
-<div>
-  <button mat-raised-button color="primary" *ngIf="!listening" (click)="listen()">Zuhören</button>
-  <button mat-raised-button color="primary" *ngIf="listening" (click)="stopListening()">Nicht mehr zuhören</button>
-  <button mat-raised-button (click)="reset()">Zurücksetzen</button>
-  <button mat-raised-button color="accent" (click)="speak()">Vorlesen</button>
+<h1>Drei-Länder-Hack - Tulpen-App</h1>
+<div class="section">
+  <button class="action-button" sbbButton *ngIf="!listening" (click)="listen()">
+    <sbb-icon-two-speech-bubbles *sbbButtonIcon></sbb-icon-two-speech-bubbles>
+    Zuhören
+  </button>
+  <button class="action-button" sbbButton *ngIf="listening" (click)="stopListening()">
+    <sbb-icon-stop *sbbButtonIcon></sbb-icon-stop>
+    Zuhören stoppen
+  </button>
+  <button class="action-button" sbbButton mode="secondary" (click)="reset()">
+    <sbb-icon-arrows-circle *sbbButtonIcon></sbb-icon-arrows-circle>
+    Zurücksetzen
+  </button>
+  <button class="action-button" sbbButton mode="ghost" (click)="speak()">
+    <sbb-icon-speaker *sbbButtonIcon></sbb-icon-speaker>
+    Vorlesen
+  </button>
 </div>
-<div>
-  <mat-form-field>
-    <mat-label>Sprache: Input</mat-label>
-    <select matNativeControl [(ngModel)]="inputLang">
-      <option value="hu">Ungarisch</option>
-      <option value="de">Deutsch</option>
-      <option value="en">Englisch</option>
-      <option value="fr">Französisch</option>
-    </select>
-  </mat-form-field>
-
-  <mat-form-field>
-    <mat-label>Sprache: Output</mat-label>
-    <select matNativeControl [(ngModel)]="outputLang">
-      <option value="hu">Ungarisch</option>
-      <option value="de">Deutsch</option>
-      <option value="en">Englisch</option>
-      <option value="fr">Französisch</option>
-    </select>
-  </mat-form-field>
+<div class="section">
+  <sbb-field class="lan-select" mode="long">
+    <sbb-label>Eingabesprache</sbb-label>
+    <sbb-select
+      placeholder="Eingabesprache"
+      [(ngModel)]="inputLang">
+      <sbb-option value="hu">Ungarisch</sbb-option>
+      <sbb-option value="de">Deutsch</sbb-option>
+      <sbb-option value="en">Englisch</sbb-option>
+      <sbb-option value="fr">Französisch</sbb-option>
+    </sbb-select>
+  </sbb-field>
+  <!--  -->
+  <!--  <mat-form-field>-->
+  <!--    <mat-label>Sprache: Input</mat-label>-->
+  <!--    <select matNativeControl [(ngModel)]="inputLang">-->
+  <!--      <option value="hu">Ungarisch</option>-->
+  <!--      <option value="de">Deutsch</option>-->
+  <!--      <option value="en">Englisch</option>-->
+  <!--      <option value="fr">Französisch</option>-->
+  <!--    </select>-->
+  <!--  </mat-form-field>-->
+  <sbb-field class="lan-select" mode="long">
+    <sbb-label>Ausgabesprache</sbb-label>
+    <sbb-select
+      placeholder="Ausgabesprache"
+      [(ngModel)]="outputLang">
+      <sbb-option value="hu">Ungarisch</sbb-option>
+      <sbb-option value="de">Deutsch</sbb-option>
+      <sbb-option value="en">Englisch</sbb-option>
+      <sbb-option value="fr">Französisch</sbb-option>
+    </sbb-select>
+  </sbb-field>
+  <!--  <mat-form-field>-->
+  <!--    <mat-label>Sprache: Output</mat-label>-->
+  <!--    <select matNativeControl [(ngModel)]="outputLang">-->
+  <!--      <option value="hu">Ungarisch</option>-->
+  <!--      <option value="de">Deutsch</option>-->
+  <!--      <option value="en">Englisch</option>-->
+  <!--      <option value="fr">Französisch</option>-->
+  <!--    </select>-->
+  <!--  </mat-form-field>-->
 </div>
 
-<h1 class="mat-h1">Tulpenmagie</h1>
-<section class="recognition">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Erkannte Eingabe</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
+<h2>Tulpenmagie</h2>
+<div class="section">
+  <div class="box">
+    <div class="box-header"><h3>Erkannte Eingabe</h3></div>
+    <div class="box-content">
       <p *ngIf="(recognisedText$ | async) as rt">{{ rt }}</p>
-    </mat-card-content>
-  </mat-card>
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>
-        Übersetzung
-      </mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
+    </div>
+  </div>
+  <div class="box">
+    <div class="box-header"><h3>Übersetzung</h3></div>
+    <div class="box-content">
       <p *ngIf="(translatedResult$ | async)?.text as tr">{{ tr }}</p>
-    </mat-card-content>
-  </mat-card>
-</section>
-<section class="analysis" *ngIf="analyzedText$ | async as ta">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Text-Analyse: Erkannte Objekte</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <table class="table-entities" mat-table [dataSource]="ta.entities">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef>Typ</th>
-          <td mat-cell *matCellDef="let element"> {{element.type}} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumnsEntities"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumnsEntities;">
-      </table>
-    </mat-card-content>
-  </mat-card>
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Text-Analyse: Klassifikation der Wörter</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <table class="table-tokens" mat-table [dataSource]="ta.tokens">
-        <ng-container matColumnDef="word">
-          <th mat-header-cell *matHeaderCellDef>Wort</th>
-          <td mat-cell *matCellDef="let element"> {{element.text.content}} </td>
-        </ng-container>
-        <ng-container matColumnDef="tag">
-          <th mat-header-cell *matHeaderCellDef>Wort-Art</th>
-          <td mat-cell *matCellDef="let element"> {{element.partOfSpeech.tag}} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumnsTokens"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumnsTokens;">
-      </table>
-    </mat-card-content>
-  </mat-card>
-</section>
+    </div>
+  </div>
+</div>
+  <!--<section class="recognition">-->
+  <!--  <mat-card>-->
+  <!--    <mat-card-header>-->
+  <!--      <mat-card-title>Erkannte Eingabe</mat-card-title>-->
+  <!--    </mat-card-header>-->
+  <!--    <mat-card-content>-->
+  <!--      <p *ngIf="(recognisedText$ | async) as rt">{{ rt }}</p>-->
+  <!--    </mat-card-content>-->
+  <!--  </mat-card>-->
+  <!--  <mat-card>-->
+  <!--    <mat-card-header>-->
+  <!--      <mat-card-title>-->
+  <!--        Übersetzung-->
+  <!--      </mat-card-title>-->
+  <!--    </mat-card-header>-->
+  <!--    <mat-card-content>-->
+  <!--      <p *ngIf="(translatedResult$ | async)?.text as tr">{{ tr }}</p>-->
+  <!--    </mat-card-content>-->
+  <!--  </mat-card>-->
+  <!--</section>-->
+
+
+  <!--<section class="analysis" *ngIf="analyzedText$ | async as ta">-->
+  <!--  <mat-card>-->
+  <!--    <mat-card-header>-->
+  <!--      <mat-card-title>Text-Analyse: Erkannte Objekte</mat-card-title>-->
+  <!--    </mat-card-header>-->
+  <!--    <mat-card-content>-->
+  <!--      <table class="table-entities" mat-table [dataSource]="ta.entities">-->
+  <!--        <ng-container matColumnDef="name">-->
+  <!--          <th mat-header-cell *matHeaderCellDef>Name</th>-->
+  <!--          <td mat-cell *matCellDef="let element"> {{element.name}} </td>-->
+  <!--        </ng-container>-->
+  <!--        <ng-container matColumnDef="type">-->
+  <!--          <th mat-header-cell *matHeaderCellDef>Typ</th>-->
+  <!--          <td mat-cell *matCellDef="let element"> {{element.type}} </td>-->
+  <!--        </ng-container>-->
+  <!--        <tr mat-header-row *matHeaderRowDef="displayedColumnsEntities"></tr>-->
+  <!--        <tr mat-row *matRowDef="let row; columns: displayedColumnsEntities;">-->
+  <!--      </table>-->
+  <!--    </mat-card-content>-->
+  <!--  </mat-card>-->
+  <!--  <mat-card>-->
+  <!--    <mat-card-header>-->
+  <!--      <mat-card-title>Text-Analyse: Klassifikation der Wörter</mat-card-title>-->
+  <!--    </mat-card-header>-->
+  <!--    <mat-card-content>-->
+  <!--      <table class="table-tokens" mat-table [dataSource]="ta.tokens">-->
+  <!--        <ng-container matColumnDef="word">-->
+  <!--          <th mat-header-cell *matHeaderCellDef>Wort</th>-->
+  <!--          <td mat-cell *matCellDef="let element"> {{element.text.content}} </td>-->
+  <!--        </ng-container>-->
+  <!--        <ng-container matColumnDef="tag">-->
+  <!--          <th mat-header-cell *matHeaderCellDef>Wort-Art</th>-->
+  <!--          <td mat-cell *matCellDef="let element"> {{element.partOfSpeech.tag}} </td>-->
+  <!--        </ng-container>-->
+  <!--        <tr mat-header-row *matHeaderRowDef="displayedColumnsTokens"></tr>-->
+  <!--        <tr mat-row *matRowDef="let row; columns: displayedColumnsTokens;">-->
+  <!--      </table>-->
+  <!--    </mat-card-content>-->
+  <!--  </mat-card>-->
+  <!--</section>-->
