--- a/src/app/text/text.component.scss
+++ b/src/app/text/text.component.scss
@@ -12,16 +12,6 @@
   width: 30%;
 }
 
-.box {
-  margin-top: 2em;
-  padding: 2em;
-
-  .box-header {
-    h3 {
-      margin-top: 0em;
-    }
-  }
-
-  background: #f6f6f6;
+app-text-box {
   width: 48%;
 }
