--- a/src/app/text/text.component.html
+++ b/src/app/text/text.component.html
@@ -12,10 +12,6 @@
     <sbb-icon-arrows-circle *sbbButtonIcon></sbb-icon-arrows-circle>
     {{'RESET' | translate}}
   </button>
-  <button class="action-button" sbbButton mode="ghost" (click)="speak()">
-    <sbb-icon-speaker *sbbButtonIcon></sbb-icon-speaker>
-    {{'READ.OUT' | translate}}
-  </button>
 </div>
 <div class="section">
   <sbb-field class="lan-select" mode="long">
@@ -34,11 +30,15 @@
 
 <h2 translate>TULPEN.MAGIC</h2>
 <div class="section">
-  <app-text-box *ngIf="(recognisedText$ | async) as rt" [content]="rt" title="RECOGNIZED.INPUT"></app-text-box>
-  <app-text-box *ngIf="(translatedResult$ | async)?.translated_text as tr" [content]="tr" title="TRANSLATION"></app-text-box>
+  <app-text-box *ngIf="(recognisedText$ | async) as rt" [content]="rt" title="RECOGNIZED.INPUT"
+                [language]="inputLang"></app-text-box>
+  <app-text-box *ngIf="(translatedResult$ | async)?.translated_text as tr" [content]="tr" title="TRANSLATION"
+                [language]="outputLang"></app-text-box>
 </div>
 <h2 translate>Glossary</h2>
 <div class="section">
-  <app-text-box *ngIf="(translatedResult$ | async)?.glossary_int as tr" [content]="tr" title="International"></app-text-box>
-  <app-text-box *ngIf="(translatedResult$ | async)?.glossary_sbb as tr" [content]="tr" title="SBB"></app-text-box>
+  <app-text-box *ngIf="(translatedResult$ | async)?.glossary_int as tr" [content]="tr" title="International"
+                [language]="outputLang"></app-text-box>
+  <app-text-box *ngIf="(translatedResult$ | async)?.glossary_sbb as tr" [content]="tr" title="SBB"
+                [language]="outputLang"></app-text-box>
 </div>
