--- a/src/app/text/text.component.scss
+++ b/src/app/text/text.component.scss
@@ -3,13 +3,13 @@
   justify-content: space-between;
 }
 
-.action-button {
-  width: 30%;
-  margin: 2em 0 2em 0;
+.top {
+  margin-top: 2em;
 }
 
-.lan-select {
-  width: 30%;
+.action-button {
+  width: 48%;
+  margin: 2em 0 2em 0;
 }
 
 app-text-box {
