--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,24 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <button class="navbar-toggler"
-          (click)="isCollapsed = !isCollapsed"
-          type="button"
-          data-toggle="collapse" data-target="#navbarToggle"
-          aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse"
-       id="navbarToggle"
-       [attr.aria-expanded]="!isCollapsed"
-       [ngClass]="{collapse: isCollapsed}">
+  <div class="navbar-collapse">
     <ul class="navbar-nav mr-auto">
-      <sbb-field mode="long">
-        <sbb-select
-          [(ngModel)]="inputLanguage" (ngModelChange)="changeLanguage($event)">
-          <sbb-option *ngFor="let lan of this.translate.getLangs()" [value]="lan"
-                      translate>{{lan}}</sbb-option>
-        </sbb-select>
-      </sbb-field>
     </ul>
     <a class="navbar-brand" href="#">
       <svg class="company-logo" viewBox="0 0 187 21" xmlns="http://www.w3.org/2000/svg" itemprop="logo">
