--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -2,23 +2,8 @@
  * Copyright (C) Schweizerische Bundesbahnen SBB, 2019.
  */
 
-// TODO: Remove after ESTA and Angular Update. See: https://issues.sbb.ch/browse/IAM-864
-.navbar {
-  font-family: "SBB Web Light", Arial, Helvetica, sans-serif !important;
-  margin-top: 0px;
-}
-
-.navbar-nav {
-  margin-top: 0px;
-}
-
-.mr-auto {
-  width: 50em;
-  margin: auto;
-}
-
-.nav-item {
-  margin-top: 0px;
+.logo {
+  width: 150px;
 }
 
 a {
