--- a/src/app/text-box/text-box.component.html
+++ b/src/app/text-box/text-box.component.html
@@ -1,7 +1,7 @@
 <div class="box">
   <div class="box-header">
     <h3 translate>{{ title }}
-      <sbb-icon-speaker width="40" (click)="speak()"></sbb-icon-speaker>
+      <sbb-icon-speaker *ngIf="content" width="40" (click)="speak()"></sbb-icon-speaker>
     </h3>
   </div>
   <div class="box-content">
